app/stylesheets/_management.sass
nav#management_navigation
  color: $offWhite
  width: 186px
  float: left
  p#open_nav
    +serif
    background-color: #396081
    font-size: 15px
    +border-top-left-radius(7px)
    padding: 10px 15px 8px
    height: 20px
  a
    color: #333
    background-color: #CFDAE3
    display: block
    border-bottom: 1px solid $offWhite
    padding: 8px 10px 8px 15px
    +sans
    font-size: 12px
    font-weight: bold
    line-height: 140%
    text-decoration: none
    img
      margin-right: 5px
      margin-bottom: -3px
    &:last-child
      +border-bottom-left-radius(7px)
      border-bottom: none
    &:hover, &.selected_nav
      background-color: #62839E
      text-decoration: none
      color: $offWhite
    &.level_1
    &.level_2
      padding-left: 20px
      &:before
        display: marker
        content: "- "
    &.new
      &:before
        display: marker
        content: "+ "
      &:hover, &.selected_nav
        color: $offWhite
      
#organization_main
  width: 786px
  float: right
  
#main
  border: 1px solid #888
    top: 0px
  padding: 15px 15px 20px 15px
  margin-bottom: 0px
  +clearfix
  

#profile
  float: right
  #information.info_box
    background-color: #efefef
    width: 395px
    border: 1px solid $lightGray
    #info_box_main
      .body
        width: 215px
      #info_box_main_left
        .link_button#follow_link
          width: 100px
          &:hover
            background-color: #396081
        #big_calendar
          width: 117px
  
nav#profile_section_navigation
  background-color: $lightGray
  border: 1px solid #888
    top: none
    bottom: none
  a
    +sans
    color: #333
    font-weight: bold
    font-size: 12px
    +inline-block
    color: white
    padding: 7px 10px
    color: #222
    text-decoration: none
    &.selected_nav, &:hover
      background-color: #666
      color: white
    &.management_disabled
      color: #888
      &:hover
        background-color: $lightGray
        text-decoration: none


h2#management_section_header
  font-size: 15px
  height: 20px
  padding: 10px 15px 8px
  background-color: $topLinkColor
  color: white
  +border-top-right-radius($defaultRadius)
  border-left: 1px solid #396081
  +serif
  img
    margin: -1px 5px 0 0 
    vertical-align: text-top

#invite_on_commonplace, #invite_by_email
  width: 365px
  
#invite_on_commonplace
  float: left
  margin-right: 10px
  padding-right: 10px
  border-right: 1px solid $lightGray
  
#invite_by_email
  float: right


#edit_profile
  width: 345px
  margin-right: 10px
  float: left
  
.management_wire
  width: 395px
  float: right

a.profile_preview
  display: block
  margin-bottom: 1em
  font-weight: bold
  
h3.management_field
  font-size: 16px
  font-weight: bold
  padding-bottom: 4px
  color: #555
  border-bottom: 1px solid #888
  margin-bottom: 10px
  +serif
  
form.management_form
  margin-bottom: 2em
  +clearfix
  label
    +sans
    font-size: 0.8em
    color: #555
    text-align: right
    width: $labelWidth
    display: block
    float: left
    margin: 3px 10px 0 0
    line-height: 13px
  input[type=text], input[type=password], textarea
    width: 200px
    +border-radius(5px)
    background-color: white
    border: 1px solid $mediumGray
    padding: 3px 6px
    margin: 0
    
  input[type=submit]
    +styled-button
    margin-left: $labelWidth + 10px



  ol
    li
      margin-bottom: 7px
      +clearfix
      p.inline-hints
        text-align: right
        padding: 3px
        margin-right: 45px
        font-size: 10px
        color: $mediumGray
      &.boolean
        label
          padding-left: $labelWidth
          text-align: left
          width: 200px
          padding-bottom: 7px
        input
          float: left
          margin-left: -15px
          margin-right: 12px
    
form#edit_avatar
  img
    float: left
    margin-right: 10px
  label
    margin: 0.5em 0
    text-align: left
    width: 200px
  input[type=file]
    width: 200px
    margin-bottom: 1em
  input[type=submit]
    margin: 1em 0 0 0 
  .crop_photo
    +sans

.styled_button
  +styled-button
  margin-bottom: 1em


ul#modules
  +clearfix
  li
    cursor: move
    margin-bottom: 0.5em
    background: $lightestGray
    padding: 10px
    +border-radius(7px)
    h3
      +sans
      font-size: 0.9em
      font-weight: bold
      color: #444
      padding-bottom: 3px
      border-bottom: 1px solid #ccc
      margin-bottom: 4px
      span.admin  
        a
          font-size: 0.8em
          color: #666
          font-weight: normal
    p
      color: #444
      line-height: 140%
      font-size: 0.8em
    
    
div[data-map]
  border: 1px solid $lightGray
  height: 200px

.invite-button
  float: right

li.odd
li.even
  background-color: $lightGray

ol.reply_thread
  margin-bottom: 10px

.delete_announcement
  float: right

p.form-hint
  text-align: left
  font-size: 11px
  color: $mediumGray
  margin: 15px 20px
  line-height: 1.2


img.normal
  width: 120px

